fix video align center

--- a/app/assets/stylesheets/page.scss
+++ b/app/assets/stylesheets/page.scss
@@ -40,3 +40,7 @@
   height: 22%;
   padding-top: 10px;
 }
+
+.video {
+  text-align: center;
+}
